added default configuration after reboot

--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=0.0.1
 author=maxpautsch
 maintainer=maxpautsch <github@hackwerk.de>
 sentence=Control a Ubiquiti mPower pro IP power switch 
-paragraph=Control a Ubiquiti mPower pro IP power switch. Reads current power consumption and power factor
+paragraph=Control a Ubiquiti mPower pro IP power switch. Reads current status, power consumption and power factor. Is able to set the default relais status after power up.
 category=Device Control
 url=https://github.com/maxpautsch/mPower
 architectures=*
